@@ -1,4 +1,5 @@
 <Ui xmlns="http://www.blizzard.com/wow/ui/">
-	<Script file="sle_chaticon.lua"/>
+	<Script file="chat.lua"/>
 	<Script file="quickarmorylink.lua"/>
+	<Script file="sle_chaticon.lua"/>
 </Ui>
